Change History
--------------

0.5 (unreleased)
~~~~~~~~~~~~~~~~

- Nothing changed yet.


0.4 (2012-08-21)
~~~~~~~~~~~~~~~~

- Add this changelog, reconstructed from svn logs and release dates on
  PyPI.

- Support a 'features' config option in the PasteDeploy INI file, which
  can contain a space-separated list of feature names.  These can be
  tested for in ZCML files with the <*directive*
  zcml:condition="have *featurename*"> syntax.

  Previously the only feature that could be enabled was 'devmode' and
  it had its own option.  For backwards compatibility, ``devmode = on``
  adds a 'devmode' feature to the feature list.


0.3 (2007-06-02)
~~~~~~~~~~~~~~~~

- Release as an egg with explicit dependencies for zope.app packages.

- Buildoutify the source tree.


0.2 (2007-05-29)
~~~~~~~~~~~~~~~~

- Extended documentation.

- Added a real PasteDeploy application factory. This allows you to run
  Zope 3 on any WSGI capable server, without integration code.

- Support for devmode.

- Support multiple databases through a config file (specify db_definition
  instead of file_storage).

- Accept filenames relative to the location of the PasteDeploy INI file.


0.1 (2006-01-25)
~~~~~~~~~~~~~~~~

- Initial release.