@@ -1,0 +1,12 @@
+*.pyc
+*.so
+*.dll
+__pycache__
+src/*.egg-info
+
+.installed.cfg
+.tox
+bin
+build
+develop-eggs
+parts
