@@ -1,6 +1,6 @@
 ##############################################################################
 #
-# Copyright (c) 2006 Zope Corporation and Contributors.
+# Copyright (c) 2006 Zope Foundation and Contributors.
 # All Rights Reserved.
 #
 # This software is subject to the provisions of the Zope Public License,
@@ -16,43 +16,52 @@
 import os
 from setuptools import setup, find_packages
 
-classifiers = """\
-Development Status :: 3 - Alpha
-Environment :: Web Environment
-License :: OSI Approved :: Zope Public License
-Operating System :: OS Independent
-Programming Language :: Python
-Topic :: Internet :: WWW/HTTP
-Topic :: Software Development :: Libraries :: Python Modules
-"""
-
 def read_file(filename):
     return open(os.path.join(os.path.dirname(__file__), filename)).read()
 
-long_description = read_file('README.txt') + '\n\n' + read_file('CHANGES.txt')
-
-setup(name="zope.paste",
-      version='0.5.dev0',
-      author="Sidnei da Silva",
-      author_email="sidnei@enfoldsystems.com",
-      description="Zope 3 and PasteDeploy",
-      long_description=long_description,
-      keywords="web wsgi application server",
-      url="http://cheeseshop.python.org/pypi/zope.paste",
-      license="Zope Public License",
-      platforms=["any"],
-      classifiers=filter(None, classifiers.split("\n")),
+setup(
+    name="zope.paste",
+    version='0.5.dev0',
+    author="Sidnei da Silva and the Zope Community",
+    author_email="zope-dev@zope.org",
+    description="Zope 3 and PasteDeploy",
+    long_description=\
+        read_file('README.txt') + \
+        '\n\n' + \
+        read_file('CHANGES.txt'),
+    keywords="web wsgi application server paste",
+    url="http://pypi.python.org/pypi/zope.paste",
+    license='ZPL 2.1',
+      classifiers=[
+        'Development Status :: 5 - Production/Stable',
+        'Intended Audience :: Developers',
+        'License :: OSI Approved :: Zope Public License',
+        'Programming Language :: Python',
+        'Programming Language :: Python :: 2',
+        'Programming Language :: Python :: 2.6',
+        'Programming Language :: Python :: 2.7',
+        #'Programming Language :: Python :: 3',
+        #'Programming Language :: Python :: 3.3',
+        'Programming Language :: Python :: Implementation :: CPython',
+        'Natural Language :: English',
+        'Operating System :: OS Independent',
+        'Topic :: Internet :: WWW/HTTP',
+        'Topic :: Software Development'
+        ],
       namespace_packages=['zope'],
       packages=find_packages(exclude='tests'),
       include_package_data=True,
       zip_safe=False,
-      install_requires=['setuptools',
-                        'PasteDeploy',
-                        'zope.interface',
-                        'zope.app.appsetup',
-                        'zope.app.wsgi',
-                        'zope.app.twisted',
-                        'zope.app.server'],
+      extras_require={
+        'twisted': ['zope.app.twisted'],
+        'zserver': ['zope.app.server'],
+        },
+      install_requires=[
+            'setuptools',
+            'PasteDeploy',
+            'zope.interface',
+            'zope.app.appsetup',
+            'zope.app.wsgi'],
       entry_points = """
       [paste.app_factory]
       main = zope.paste.factory:zope_app_factory
